Fix colors and finish the activity:More CSS: Fonts and Spacing

--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,3 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Merienda:wght@400;700&family=Open+Sans:ital,wght@0,300;1,300&display=swap');
+
+body {
+    background-color: #fcfbfb;
+    font-family: Raleway, Arial, sans-serif;
+    font-size: 22px;
+    margin: 0;
+    padding: 0;
+}
 #content {
     max-width: 1600px;
     text-align: center;
@@ -7,6 +16,16 @@ nav a {
     text-align: center;
     color:black;
     text-decoration: none;
+    padding: 35px;
+}
+.home-title { 
+    color:#00171F;
+    font-family: Merienda, 'Times New Roman', Times, serif;
+    font-size: 2em;
+    margin-top: 10px;
+}
+h4 {
+    color:#00171F; 
 }
 #hero-msg h1, #hero-msg h4 {
     text-align: center;
@@ -17,37 +36,38 @@ nav a {
 main section{
     text-align: center;  
 }
+.rivers-card, .camping-card, .rapids-card {
+    margin: 200px 0;
+}   
 
 #background {
     height: 725px;
-    background-color: skyblue;
+    background-color: #00A7E1;
 }
 
-body {
-    background-color: #fcfbfb; 
-}
 header {
-    background-color:rgba(20,30,13, .7);
+    background-color:#00A7E1;
 }
 nav a:hover {
     background-color: black;
     color: #d9c2a3;
 }
 
-.book, .join {
-    background-color: black;
-
-}
 .book:hover, .join:hover {
     background-color: black;
 }
 
-.msg{
+.msg {
     background-color: black;
+    line-height: 1.5em;
+    padding: 35px;
+
 }
 footer {
     background-color: black;
     color:white;
+    padding: 25px 50px;
+    margin-top: 200px;
 }
 footer a {
     color:white;
@@ -63,29 +83,47 @@ footer p {
 footer p a:hover {
     text-decoration: underline;
 } 
-
-.home-title { 
-    color:pink;
-}
-h4 {
-    color:pink; 
-}
+footer .social img {
+    padding-top: 15px;
+}  
 .book, .join {
-    color:white;
+    background-color: #003459 ;
+    color:#00A7E1;
     text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 }
 .book:hover, .join:hover {
     color:yellow;
 }
 .msg h2 {
-    color:black;
+    color:#FFFFFF;
+    font-family: Merienda, 'Times New Roman', Times, serif;
 }
 .msg p {
     color:white;
+    font-size: .8em;
+    padding-bottom: 15px;
 }
 .icon {
     width: 80px;
+    padding-top: 10px;
 }
 #hero-img{
     width: 100%;
+}
+#logo_link {
+    padding-top: 5px;
+}  
+.card-img {
+    border: 10px solid black;
+}
+main section img {
+    box-sizing: border-box;
+}
+.logo {
+    height: 100px;
+    width: auto;
 }
